# cachezilla

./: .gitignore  .pre-commit-config.yaml  BrainStorming.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
benchmark/: Makefile  api.py  benchmark_cache.ts  benchmark_no_cache.ts  db.py  docker-compose.yml
cachezilla/: __init__.py  cache_item_ds.py  cachezilla.py
tests/: conftest.py  test_cachezilla.py
