[tool.poetry]
name = "cachezilla"
version = "0.1.0"
description = "A lightweight caching system to boost your next app"
repository = "https://github.com/kareemmahlees/cachezilla"
authors = ["Kareem Mahlees <kareemmahlees@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.benchmark.dependencies]
fastapi = "^0.95.1"
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.6"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportOptionalSubscript = false
reportOptionalMemberAccess = false

[tool.pylint]
disable = ["missing-module-docstring","missing-function-docstring"]

[tool.mypy]
disable_error_code = ["union-attr"]

[tool.pydocstyle]
ignore = ["D100","D104"]
